[project]
name = "pyneapples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Štěpán Sršeň", email = "Stepan.Srsen@vscht.cz" },
]
requires-python = ">=3.9"
dependencies = [
    'numpy',
    'matplotlib',
    'scipy',
    'joblib',
]

[project.optional-dependencies]
dev = [
    "pytest ~= 7.0"
]

[project.scripts]
rep_sampler_2D = "rep_sampler_2D:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
